fix(settings-modal): increase z-index to prevent blinking colon overlapping modal

--- a/styles/components/_settings.scss
+++ b/styles/components/_settings.scss
@@ -13,6 +13,7 @@
     position: fixed;
     width: 100%;
     max-width: none;
+    z-index: 2;
 
     @include mixins.media-breakpoint-up(md){
         border-radius: 1rem 1rem 1rem 1rem;
